@@ -310,7 +310,7 @@ static void cfgparam(struct configfile *cf)
 			printf("%s:%d: AX25-RXPORT '%s' '%s'\n",
 			       cf->name, cf->linenum, param1, str);
 
-		netax25_addrxport(param1, str);
+		netax25_addrxport(param1, str, NULL);
 
 	} else if (strcmp(name, "netbeacon") == 0) {
 		netbeacon_set(param1, str);
